# crypto

./: README.md
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs  miner.rs
backend/api/src/blockchain/: block.rs  chain.rs
backend/api/src/transaction/: input.rs  mod.rs  output.rs  pool.rs  transaction.rs  wallet.rs
backend/api/src/utils/: hash.rs  mod.rs  serialize.rs
backend/p2p/: package-lock.json  package.json  server.js  server.ts  types.ts  ws_test.js
backend/src/: main.rs  transaction.rs
backend/src/blockchain/: block.rs  chain.rs  hash.rs  mod.rs
backend/src/server/: mod.rs
backend/src/transaction/: input.rs  mod.rs  output.rs  pool.rs  transaction.rs  wallet.rs
backend/src/utils/: mod.rs
ws_test/: client.js  package-lock.json
