[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
hex = "0.4.3"
secp256k1 = {version = "0.30.0", features = ["rand"]}
sha2 = "0.10.8"
tokio ={version = "1.43.0", features = ["full"]}
hyper = "1.6.0"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
to-binary = "=0.4.0"
rand = "0.9.0"
[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

